# wincap-saas-codex

./: .env.example  .gitignore  ARCHITECTURE_CLEANUP_PLAN.md  AUDIT_REPORT.md  CHRISTOPHE_AUDIT_FULL.md  CHRISTOPHE_AUDIT_INDEX.md  CHRISTOPHE_FORENSIC_AUDIT_COMPLETE.md  CHRISTOPHE_FORENSIC_AUDIT_FINAL.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT_INTERNAL.md  DEPLOYMENT_READY.md  DOCUMENTATION.md  FINAL_SUMMARY.md  FORENSIC_ACTION_PLAN.md  FORENSIC_AUDIT_REPORT.md  GIT_PUSH_COMMANDS.md  INTEGRATED_DEVELOPMENT_ROADMAP.md  LOVABLE_CHECKLIST.md  LOVABLE_UI_GUIDE.md  MVP_IMPLEMENTATION_PLAN.md  MVP_SUMMARY.md  MVP_TESTING_CHECKLIST.md  PHASE_0_FIXES_APPLIED.md  PHASE_0_TESTING_COMMANDS.md  PHASE_1_IMPLEMENTATION_CHECKLIST.md  PHASE_1_IMPLEMENTATION_SPECS.md  PHASE_1_QUICK_REFERENCE.md  PRODUCT_WIREFRAME_AND_ROADMAP.md  QUICKSTART.md  README.md  TYPE_GENERATION.md  WHISPER_ROADMAP.md  docker-compose.yml  openapi.config.json  package-lock.json  package.json  start-dev.sh
apps/api/: .mypy.ini  .ruff.toml  DEPLOYMENT.md  DEVELOPMENT.md  FOCUSED_ROADMAP.md  Makefile  api.py  main.py  pyproject.toml  pytest.ini  run.sh  setup.py
apps/api/config/: default_mapping.yml  settings.py
apps/api/docs/: API_REFERENCE.md
apps/api/src/: __init__.py  cleanup.py  exceptions.py  logging_config.py  validators.py
apps/api/src/agent/: tools.py
apps/api/src/cli/: __init__.py  output.py
apps/api/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_cli_output.py  test_config.py  test_exceptions.py  test_integration_cli.py  test_models.py  test_validators.py
docs/: ARCHITECTURE.md  (+3 more)
(+70 files in other folders)
